--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\AutoAssessmentCommand.cs" />
     <Compile Include="Commands\PortingAssistantVSExtensionClientPackage.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -55,24 +56,41 @@
     <Compile Include="Commands\SolutionPortingCommand.cs" />
     <Compile Include="ContentDefinitions\CsharpContentDefinition.cs" />
     <Compile Include="ContentDefinitions\CsprojContentDefinition.cs" />
+    <Compile Include="Models\AnalyzeSolutionResponse.cs" />
+    <Compile Include="Models\ProjectFilePortingResponse.cs" />
+    <Compile Include="Options\BaseOptionModel.cs" />
+    <Compile Include="Options\GeneralOptions.cs" />
+    <Compile Include="Options\PortingAssistantOptions.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Options\PortingAssistantOptionsPage.xaml.cs">
+      <DependentUpon>PortingAssistantOptionsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PortingAssistantLanguageClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PortingAssistantVSExtensionClientPackage.cs" />
+    <Compile Include="Utils\CommandUtils.cs" />
+    <Compile Include="Utils\NotificationUtils.cs" />
+    <Compile Include="Utils\SolutionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="PortingAssistantVSExtensionClientSettings.json" />
+    <None Include="Resources\PortingAssistantVSExtensionClientSettings.json" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
@@ -96,7 +114,12 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="Options\PortingAssistantOptionsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
