--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -54,18 +54,21 @@
     <Compile Include="Commands\ProjectPortingCommand.cs" />
     <Compile Include="Commands\SolutionAssessmentCommand.cs" />
     <Compile Include="Commands\SolutionPortingCommand.cs" />
+    <Compile Include="Common\Constants.cs" />
+    <Compile Include="Common\SettingsStore.cs" />
     <Compile Include="ContentDefinitions\CsharpContentDefinition.cs" />
     <Compile Include="ContentDefinitions\CsprojContentDefinition.cs" />
     <Compile Include="Models\AnalyzeSolutionResponse.cs" />
+    <Compile Include="Models\ProjectFilePortingRequest.cs" />
     <Compile Include="Models\ProjectFilePortingResponse.cs" />
-    <Compile Include="Options\BaseOptionModel.cs" />
-    <Compile Include="Options\GeneralOptions.cs" />
-    <Compile Include="Options\PortingAssistantOptions.cs">
+    <Compile Include="Models\TargetFrameworkType.cs" />
+    <Compile Include="Options\OptionPage.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Options\PortingAssistantOptionsPage.xaml.cs">
-      <DependentUpon>PortingAssistantOptionsPage.xaml</DependentUpon>
+    <Compile Include="Options\OptionPageControl.xaml.cs">
+      <DependentUpon>OptionPageControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\UserSettings.cs" />
     <Compile Include="PortingAssistantLanguageClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PortingAssistantVSExtensionClientPackage.cs" />
@@ -74,7 +77,6 @@
     <Compile Include="Utils\SolutionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\PortingAssistantVSExtensionClientSettings.json" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -93,6 +95,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac">
+      <Version>6.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.3038" />
     <PackageReference Include="System.ComponentModel.Composition">
@@ -109,13 +114,13 @@
     </VSCTCompile>
     <Content Include="Commands\Resources\SolutionPortingCommand.png" />
     <Content Include="PortingAssistantVSExtensionClientSettings.pkgdef">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+       <Generator>ResXFileCodeGenerator</Generator>
+       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+       <IncludeInVSIX>true</IncludeInVSIX>
+     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Options\PortingAssistantOptionsPage.xaml">
+    <Page Include="Options\OptionPageControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
