placeholder for unit test
cr https://code.amazon.com/reviews/CR-47549114

--- a/PortingAssistantVSExtension/.gitignore
+++ b/PortingAssistantVSExtension/.gitignore
@@ -1,5 +1,7 @@
 PortingAssistantExtensionServer/bin/
 PortingAssistantExtensionServer/obj/
+PortingAssistantExtensionServerUnitTest/bin/
+PortingAssistantExtensionServerUnitTest/obj/
 PortingAssistantVSExtensionClient/bin/
 PortingAssistantVSExtensionClient/obj/
 .DS_Store
