--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -58,11 +58,24 @@
     <Compile Include="Common\Constants.cs" />
     <Compile Include="ContentDefinitions\CsharpContentDefinition.cs" />
     <Compile Include="ContentDefinitions\CsprojContentDefinition.cs" />
+    <Compile Include="Dialogs\PortingDialog.xaml.cs">
+      <DependentUpon>PortingDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\SelectTargetDialog.xaml.cs">
+      <DependentUpon>SelectTargetDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AnalyzeSolutionRequest.cs" />
     <Compile Include="Models\AnalyzeSolutionResponse.cs" />
     <Compile Include="Models\ProjectFilePortingRequest.cs" />
     <Compile Include="Models\ProjectFilePortingResponse.cs" />
     <Compile Include="Models\TargetFrameworkType.cs" />
-    <Compile Include="Options\OptionPage.cs">
+    <Compile Include="Options\DataSharingOption.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Options\DataSharingOptionPage.xaml.cs">
+      <DependentUpon>DataSharingOptionPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Options\GeneralOption.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Options\OptionPageControl.xaml.cs">
@@ -77,6 +90,14 @@
     <Compile Include="Utils\SolutionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Commands\Resources\warning.png.jpg">
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="PortingAssistantVSExtensionSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -86,12 +107,15 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -102,12 +126,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.ComponentModel.Composition">
-      <Version>5.0.0</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Commands\Resources\SolutionAssessmentCommand.png" />
+    <Content Include="PortingAssistantVSExtensionSettings.pkgdef">
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <VSCTCompile Include="Commands\PortingAssistantVSExtensionClientPackage.vsct">
       <Generator>VsctGenerator</Generator>
       <ResourceName>Menus.ctmenu</ResourceName>
@@ -115,6 +140,18 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Dialogs\PortingDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialogs\SelectTargetDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Options\DataSharingOptionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Options\OptionPageControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
