--- a/PortingAssistantVSExtension/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -5,17 +5,21 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
-    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
-    <PackageReference Include="PortingAssistant.Client.Client" Version="1.4.16" />
-    <PackageReference Include="PortingAssistant.Client.Common" Version="1.5.10-alpha-g0bce462880" />
-    <PackageReference Include="PortingAssistant.Client.NuGet" Version="1.5.10-alpha-g0bce462880" />
-    <PackageReference Include="PortingAssistant.Client.Porting" Version="1.5.10-alpha-g0bce462880" />
-    <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
-	<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
-	<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="System.IO.Pipes.AccessControl" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\.editorconfig" Link=".editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
+		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
+		<PackageReference Include="Serilog" Version="2.10.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+		<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+		<PackageReference Include="System.IO.Pipes.AccessControl" Version="5.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\..\..\PortingAssistant\src\PortingAssistantClient\src\PortingAssistant.Client.Client\PortingAssistant.Client.Client.csproj" />
+	</ItemGroup>
 </Project>
