Changes for incremental updates - not complete
cr https://code.amazon.com/reviews/CR-48624850

--- a/PortingAssistantVSExtension/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -20,6 +20,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\..\PortingAssistant\src\PortingAssistantClient\src\PortingAssistant.Client.Client\PortingAssistant.Client.Client.csproj" />
+	  <ProjectReference Include="..\..\..\porting-assistant-dotnet-client\src\PortingAssistant.Client.Client\PortingAssistant.Client.Client.csproj" />
 	</ItemGroup>
 </Project>
