--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PortingAssistantVSExtensionClient</RootNamespace>
     <AssemblyName>PortingAssistantVSExtensionClient</AssemblyName>
-    <TargetVsixContainerName>PortingAssistant.Development.Kit-$(VSVSIX_VERSION).vsix</TargetVsixContainerName>
+    <TargetVsixContainerName>PortingAssistant.Extension-$(VSVSIX_VERSION).vsix</TargetVsixContainerName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
@@ -167,7 +167,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="PortingAssistantLanguageServer\PortingAssistantExtensionServer.exe">
+    <Content Include="PortingAssistantLanguageServer\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
       <VSIXSubPath>PortingAssistantLanguageServer</VSIXSubPath>
@@ -180,11 +180,4 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
