fix layout continue

--- a/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -104,6 +104,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Resources\StatusInformation.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>Resources</VSIXSubPath>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
