--- a/PortingAssistantVSExtension/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -8,6 +8,10 @@
 	<ItemGroup>
 		<PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
 		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
+		<PackageReference Include="PortingAssistant.Client.Analysis" Version="1.8.4-alpha-g27b33cb889" />
+		<PackageReference Include="PortingAssistant.Client.Client" Version="1.8.4-alpha-g27b33cb889" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="1.8.4-alpha-g27b33cb889" />
+		<PackageReference Include="PortingAssistant.Client.NuGet" Version="1.8.4-alpha-g27b33cb889" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
 		<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
@@ -16,7 +20,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\..\PortingAssistant\src\PortingAssistantClient\src\PortingAssistant.Client.Client\PortingAssistant.Client.Client.csproj" />
 		<ProjectReference Include="..\PortingAssistantExtensionTelemetry\PortingAssistantExtensionTelemetry.csproj" />
 	</ItemGroup>
 </Project>
