--- a/PortingAssistantVSExtension/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/PortingAssistantVSExtension/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -8,10 +8,7 @@
     <PackageReference Include="Aws4RequestSigner" Version="1.0.1" />
     <PackageReference Include="AWSSDK.APIGateway" Version="3.7.0.9" />
     <PackageReference Include="AWSSDK.Core" Version="3.7.0.13" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\PortingAssistant\src\PortingAssistantClient\src\PortingAssistant.Client.Client\PortingAssistant.Client.Client.csproj" />
+    <PackageReference Include="PortingAssistant.Client.Common" Version="1.8.4-alpha-g27b33cb889" />
   </ItemGroup>
 
 </Project>
