Add src and tst folder. Add null checks to the logwatcher
cr https://code.amazon.com/reviews/CR-49468480

--- a/tst/PortingAssistantExtensionServerUnitTest/PortingAssistantExtensionServerUnitTest.csproj
+++ b/tst/PortingAssistantExtensionServerUnitTest/PortingAssistantExtensionServerUnitTest.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PortingAssistantExtensionServer\PortingAssistantExtensionServer.csproj" />
+    <ProjectReference Include="..\..\src\PortingAssistantExtensionServer\PortingAssistantExtensionServer.csproj" />
   </ItemGroup>
 
 </Project>
