--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -17,6 +17,7 @@
     <AssemblyName>PortingAssistantVSExtensionClient</AssemblyName>
     <TargetVsixContainerName>PortingAssistant.Extension-$(VSVSIX_VERSION).vsix</TargetVsixContainerName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+	<LanguageServerPath>$(ProjectDir)\PortingAssistantLanguageServer\</LanguageServerPath>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -203,4 +204,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Target Name="BuildLanguageServer" BeforeTargets="CoreCompile">
+    <ItemGroup>
+      <RemoveFiles Include="$(LanguageServerPath)**" />
+    </ItemGroup>
+    <Delete Files="@(RemoveFiles)" />
+    <Exec Command="dotnet publish $(ProjectDir)..\PortingAssistantExtensionServer\PortingAssistantExtensionServer.csproj -c Release -f netcoreapp3.1 -p:PublishSingleFile=true -r win-x64 --self-contained false   -o $(ProjectDir)\PortingAssistantLanguageServer\" />
+  </Target>
 </Project>
