--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+	<PropertyGroup>
+		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+	</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Aws4RequestSigner" Version="1.0.1" />
