--- a/src/PortingAssistantVSExtensionClient/Resources/porting-assistant-config.json
+++ b/src/PortingAssistantVSExtensionClient/Resources/porting-assistant-config.json
@@ -7,9 +7,9 @@
     }
   },
   "TelemetryConfiguration": {
-    "InvokeUrl": "https://8q2itpfg51.execute-api.us-east-1.amazonaws.com/beta",
-    "Region": "us-east-1",
-    "ServiceName": "appmodernization-beta",
+    "InvokeUrl": "",
+    "Region": "",
+    "ServiceName": "",
     "MaxBufferCapacity": 500000,
     "MaxBufferCache": 1000000,
     "FlushInterval": 120000,
