--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,11 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aws4RequestSigner" Version="1.0.1" />
-		<PackageReference Include="AWSSDK.APIGateway" Version="3.7.0.9" />
-		<PackageReference Include="AWSSDK.Core" Version="3.7.0.13" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="1.8.4-alpha-g27b33cb889" />
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="1.8.11-alpha-gb14392cb90" />
+		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="1.8.15-alpha-g6b581d8647" />
 	</ItemGroup>
 
 </Project>
