--- a/tst/PortingAssistantExtensionIntegTests/PortingAssistantExtensionIntegTests.csproj
+++ b/tst/PortingAssistantExtensionIntegTests/PortingAssistantExtensionIntegTests.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\porting-assistant-config.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\porting-assistant-config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
@@ -16,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="TestProjects\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +34,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="TestProjects\*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
