--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -116,6 +116,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <None Include="packages.lock.json" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -145,6 +146,9 @@
     </PackageReference>
     <PackageReference Include="AWSSDK.Core">
       <Version>3.7.0.13</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.PowerShell.5.ReferenceAssemblies">
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.9.31025.194 " ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
