add more parameters in the mock

--- a/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
+++ b/src/PortingAssistantVSExtensionClient/PortingAssistantVSExtensionClient.csproj
@@ -117,6 +117,7 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="packages.lock.json" />
+    <None Include="Resources\setup.ps1" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
