--- a/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -12,7 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
 		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
-		<PackageReference Include="PortingAssistant.Client.Client" Version="1.8.23-alpha-g79847935d1" />
+		<PackageReference Include="PortingAssistant.Client.Client" Version="1.8.43-g33c023161f" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
