--- a/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
+++ b/src/PortingAssistantExtensionServer/PortingAssistantExtensionServer.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<IncludeSymbolsInSingleFile>true</IncludeSymbolsInSingleFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -10,9 +11,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LibGit2Sharp" Version="0.26.2" />
 		<PackageReference Include="OmniSharp.Extensions.LanguageProtocol" Version="0.18.3" />
 		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.18.3" />
-		<PackageReference Include="PortingAssistant.Client.Client" Version="1.8.73-g3330a7d158" />
+		<PackageReference Include="PortingAssistant.Client.Client" Version="1.8.79-g47f56933b2" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
